[package]
name = "pong"
version = "0.1.0"
authors = ["Tirth Jain <jaintirth24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
pnet = "0.26.0"
dns-lookup = "1.0.5"
byteorder = "1.3.4"
nix = "0.19.0"
